remove issuer id
